--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
    <body>
       <div id='app'></div>
-      <script type='module' src='./Project/src/app/app.js'></script>
+      <script type='module' src='./project/src/app/app.js'></script>
    </body>
 </html>
